--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h3><span>Language: </span> English , Hindi</h3>
                 <h3><span>Hobbies:</span>Coding, Watching Movies</h3>
                 <h3><span>Contact: </span> +91 9001224783</h3>
-                <a href="documents/Srishti Sharma 3.pdf" target="_blank"><button class="btn">Download CV <i
+                <a href="document/Balram Pandey.pdf" target="_blank"><button class="btn">Download CV <i
                             class="fas fa-download"></i></button></a>
             </div>
             <div class="counter">
